--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -3,9 +3,16 @@
 /*==========  Desktop First  ==========*/
 
 /* Large Devices, Wide Screens */
+@media only screen and (max-width : 1300px)
+	/**/
+	.item 
+		p 
+			font-size: clamp(16px, 1.042vw, 1.042vw)
 @media only screen and (max-width : 1200px)
 	/**/
-
+	.item 
+		p 
+			font-size: clamp(14px, 1.042vw, 1.042vw)
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
