--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -91,7 +91,9 @@ a:hover
 	flex-direction: column 
 	align-items: center
 	p 
-		font-size: clamp(14px, 1.042vw, 1.042vw)
+		font-size: 1.042vw
+		font-size: clamp(18px, 1.042vw, 1.042vw)
+
 		line-height: 1.8
 		font-weight: 300
 
