--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -16,3 +16,9 @@
     src: local('DIN Pro Light'), local('DINPro-Light'), url('../fonts/din/DINPro-Light.eot?#iefix') format('embedded-opentype'), url('../fonts/din/DINPro-Light.woff') format('woff'), url('../fonts/din/DINPro-Light.ttf') format('truetype')
     font-weight: 300
     font-style: normal
+@font-face
+    font-family: 'Bulo'
+    src: url('../fonts/Bulo/Bulo Black.woff') 
+    src: local('Bulo'), local('Bulo'), url('../fonts/Bulo/Bulo Black.woff') format('woff')
+    font-style: normal
+
