--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -17,8 +17,9 @@
     font-weight: 300
     font-style: normal
 @font-face
-    font-family: 'Bulo'
-    src: url('../fonts/Bulo/Bulo Black.woff') 
-    src: local('Bulo'), local('Bulo'), url('../fonts/Bulo/Bulo Black.woff') format('woff')
+    font-family: "Bulo"
+    src: url("https://db.onlinewebfonts.com/t/39ac78a414360412e19a1599f9a2d70c.eot")
+    src: url("https://db.onlinewebfonts.com/t/39ac78a414360412e19a1599f9a2d70c.eot?#iefix") format("embedded-opentype"), url("https://db.onlinewebfonts.com/t/39ac78a414360412e19a1599f9a2d70c.woff2") format("woff2"), url("https://db.onlinewebfonts.com/t/39ac78a414360412e19a1599f9a2d70c.woff") format("woff"), url("https://db.onlinewebfonts.com/t/39ac78a414360412e19a1599f9a2d70c.ttf") format("truetype"), url("https://db.onlinewebfonts.com/t/39ac78a414360412e19a1599f9a2d70c.svg#Bulo") format("svg")
+    font-weight: 900
     font-style: normal
 
