--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -41,7 +41,7 @@
 		padding-bottom: 7vw
 		padding-top: 5vw
 		h1
-			font-size: 7.5vw
+			font-size: 7.8vw
 			padding-top: 0
 			
 	.main-screen__content
@@ -184,6 +184,10 @@
 	.advantages__item img 
 		width: 4vw
 		margin-right: 3vw
+	.logo 
+		img 
+			width: 40vw
+
 	
 
 
