--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -32,6 +32,7 @@ a:hover
 	padding: 0.260vw 0
 	display: flex 
 	align-items: center
+	padding-top: 0
 
 .logo 
 	font-size: 4.375vw 
@@ -40,6 +41,8 @@ a:hover
 	a
 		color: #fff
 		text-decoration: none
+	img 
+		width: 17.552vw
 //end header style
 
 //start main-screen
